--- a/chaincode/tsconfig.json
+++ b/chaincode/tsconfig.json
@@ -7,7 +7,8 @@
         "moduleResolution": "node",
         "module": "commonjs",
         "declaration": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "strict": true
     },
     "include": [
         "./src/**/*"
