--- a/application/package.json
+++ b/application/package.json
@@ -20,8 +20,10 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "blind-signatures": "^1.0.7",
         "fabric-ca-client": "^2.2.4",
-        "fabric-network": "^2.2.4"
+        "fabric-network": "^2.2.4",
+        "node-rsa": "^1.1.1"
     },
     "devDependencies": {
         "tslint": "^5.11.0",
