--- a/chaincode/tsconfig.json
+++ b/chaincode/tsconfig.json
@@ -8,7 +8,8 @@
         "module": "commonjs",
         "declaration": true,
         "sourceMap": true,
-        "strict": true
+        "strict": true,
+        "esModuleInterop": true
     },
     "include": [
         "./src/**/*"
