--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -8,7 +8,8 @@
         "module": "commonjs",
         "declaration": true,
         "sourceMap": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "esModuleInterop": true
     },
     "include": [
         "./src/**/*"
