--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -9,7 +9,10 @@
         "declaration": true,
         "sourceMap": true,
         "noImplicitAny": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "lib": [
+            "es2019"
+        ]
     },
     "include": [
         "./src/**/*"
