--- a/chaincode/package.json
+++ b/chaincode/package.json
@@ -22,11 +22,13 @@
     "license": "Apache-2.0",
     "dependencies": {
         "@types/jsbn": "^1.2.29",
+        "@types/lodash": "^4.14.172",
         "@types/node-rsa": "^1.1.0",
         "blind-signatures": "^1.0.7",
         "fabric-contract-api": "^2.0.0",
         "fabric-shim": "^2.0.0",
         "jsbn": "^1.1.0",
+        "lodash": "^4.17.21",
         "node-rsa": "^1.1.1"
     },
     "devDependencies": {
