--- a/application/tsconfig.json
+++ b/application/tsconfig.json
@@ -10,6 +10,7 @@
         "sourceMap": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
+        "strict": true,
         "lib": [
             "es2019"
         ]
